Fixed post header word wrapping behaviour

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,10 @@
   text-align: left;
 }
 
+.header.expanded .title * {
+  white-space: normal;
+}
+
 .header h1 {
   font-size: 20px;
   line-height: 25px;
@@ -19,6 +23,7 @@
   border-radius: 50px;
   width: 50px;
   height: 50px;
+  min-width: 50px;
   overflow: hidden;
   float: right;
 }
@@ -30,6 +35,15 @@
 .header .title {
   margin-left: 20px;
   line-height: 50px;
+  max-width: 65%;
+}
+
+.header .title h1.alone {
+  line-height: 50px;
+}
+
+.header.expanded .title h1.alone {
+  line-height: 25px;
 }
 
 .header .down {
